# MCDM22_SummerSchool

./: .Rhistory  README.md
data/current/: current_territories.csv  distances.csv  formatted_territories.csv  structure_data.R  workload.csv
problem/: PfizerData.xlsx
python/: data_wrangling.py  main.py  main2.py  problem_def.py  pyproject.toml  utils.py
